fix: Global icon-text vertical alignment using -0.125em

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     width: 16px;
     height: 16px;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: -0.125em;
     stroke-width: 2;
 }
 
